<resources>
    <string name="app_name">MansPlayer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">配置权限</string>
    <string name="nav_1">开通会员</string>
    <string name="nav_2">历史记录</string>
    <string name="nav_3">赞助一下</string>
    <string name="nav_4">版本更新</string>
    <string name="nav_5">官方Q群</string>

    <string name="popupMenuItem_1">注册账号</string>
    <string name="popupMenuItem_2">登录账号</string>
    <string name="popupMenuItem_3">注销账号</string>
    <string name="popupMenuItem_4">联系客服</string>
    <string name="popupMenuItem_5">账号问题</string>

    <string name="signNumber">账号</string>
    <string name="signPassword">密码</string>
    <string name="signNotice">建议使用QQ账号，作为您在本软件中的账号，以方便记忆。</string>
    <string name="signBtnText">注册账号</string>
    <string name="loginBtnText">登录账号</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
