<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sign"
            android:title="@string/popupMenuItem_1" />
        <item
            android:id="@+id/login"
            android:title="@string/popupMenuItem_2" />
        <item
            android:id="@+id/exit"
            android:title="@string/popupMenuItem_3" />

    </group>

    <item android:title="其他">
        <menu>
            <item
                android:id="@+id/contactQQ"
                android:title="@string/popupMenuItem_4" />
            <item
                android:id="@+id/questions"
                android:title="@string/popupMenuItem_5" />
        </menu>
    </item>

</menu>
